tests/lexer/invalid/test_malformed_number.src
123abc
12.34.56
.123
123.
9999999999
-2147483649
2147483648
1.2.3